# AZL-Language

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  AGENT_MONITORING_DASHBOARD.md  AGI_USAGE_GUIDE.md  AUTONOMOUS_SELF_EVOLUTION_ENGINE_PHASE_4_COMPLETE_SUMMARY.md  AZL_AZME_INTEGRATION_STATUS.md  AZL_SELF_HOSTING_ACHIEVEMENT_REPORT.md  AZL_SYSTEM_INTERFACE_ANALYSIS.md  AZL_V2_FINAL_PROGRESS.md  AZL_V2_PROGRESS_SUMMARY.md  AZL_V2_SELF_HOSTING_IMPLEMENTATION_SUMMARY.md  AZL_V2_STANDARD_LIBRARY.md  AZME_AUTONOMOUS_FIELD_INTELLIGENCE_PHASE_5_COMPLETE_SUMMARY.md  AZME_COMPLETE_SYSTEM_README.md  AZME_INTEGRATION_STATUS.md  AZME_USAGE_GUIDE.md  CHANGELOG.md  CLEAN_ARCHITECTURE_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETED_SYSTEMS_SUMMARY.md  COMPLETE_MODULAR_QUANTUM_TRANSFORMATION.md  COMPREHENSIVE_REALITY_AUDIT.md  CORRECTED_AGENT_ANALYSIS.md  CURRENT_PROJECT_STATUS_UPDATE.md  Cargo.toml  DETAILED_ACTION_PLAN.md  DOCUMENTATION_ACCURACY_REPORT.md  DRIVE_MIGRATION_SUMMARY.md  Dockerfile  EXACT_PATH_FORWARD.md  FINAL_MODULAR_TRANSFORMATION_SUMMARY.md  FINAL_SUPERVISOR_ASSESSMENT.md  GITHUB_PUBLISH.md  LICENSE  LONG_TERM_SOLUTIONS_MASTER_PLAN.md  MODULAR_QUANTUM_ARCHITECTURE_SUMMARY.md  Makefile  OPERATIONS.md  (+303 more)
.azl/: benchmark_native_api.lat  benchmark_native_api_20260318_211154.txt  benchmark_native_api_20260318_211718.txt  benchmark_native_api_20260319_003903.txt  benchmark_native_api_20260319_005748.txt  benchmark_native_api_20260319_010653.txt  benchmark_native_api_20260319_010843.txt  benchmark_native_api_20260319_012113.txt  benchmark_native_api_20260319_012724.txt  benchmark_native_api_20260319_013824.txt  benchmark_native_api_20260319_014343.txt  benchmark_native_api_20260319_014524.txt  benchmark_native_api_20260319_033031.txt  benchmark_native_api_20260319_033145.txt  benchmark_native_api_20260319_040129.txt  benchmark_native_api_20260319_040432.txt  benchmark_native_api_20260319_045704.txt  bind_test  daemon.pid  native_engine_runs.jsonl  native_runtime_state.json  sysproxy  sysproxy.pid  sysproxy_tcp  sysproxy_tcp.err
.azl/responses/: analytics.json  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
azl/: comprehensive_training_pipeline.azl
benches/: vm_benches.rs
config/: prod.azl.json
deployment/: README.md  deployment_report.txt  production_config.json
docs/: ADVANCED_OPTIMIZATION_FEATURES.md  AGENT_COORDINATION_STATUS.md  AI_MAINTAINER_CONTINUITY_HANDOFF.md  API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  AUDIT_STRENGTH_ITEMS.md  AZLPACK_SPEC.md  AZL_BCBA_NAMING_FRAME.md  AZL_DOCUMENTATION_CANON.md  AZL_ENGINEERING_REALITY_AUDIT.md  AZL_ENTERPRISE_SETUP.md  AZL_GPU_NEURAL_QUANTUM_INVENTORY.md  AZL_GPU_NEURAL_SURFACE_MAP.md  AZL_LITERAL_CODEC_CONTAINER_V0.md  AZL_LSP_SETUP.md  AZL_NATIVE_RUNTIME_CONTRACT.md  AZL_PERFECTION_PLAN.md  AZL_QUALITY_MEASUREMENTS_VS_PYTHON.md  AZL_STRATEGIC_CONSENSUS_AND_EXECUTION_PLAN.md  AZL_STRENGTH_BAR.md  AZL_VS_PYTHON_COMPARISON.md  AZME_PRODUCTION_RUNBOOK.md  BENCHMARKS_AZL_VS_REAL_WORLD.md  BENCHMARKS_REAL_WORLD.md  CANONICAL_HTTP_PROFILE.md  CI_CD_PIPELINE.md  CODEGEN.md  CONNECTIVITY_AUDIT.md  CONTRIBUTING.md  DEEP_AUDIT_QUANTUM_MEMORY_PHYSICS.md  ENGINEERING_READINESS_CHECKLIST.md  ENTERPRISE_BUILD_SYSTEM.md  ERROR_SYSTEM.md  GITHUB_BRANCH_PROTECTION.md  INTEGRATIONS_HOST_VS_NATIVE.md  INTEGRATION_ISSUES_FIXED.md  INTEGRATION_VERIFY.md  LANGUAGE_REUSE_MAP.md  LHA3_COMPRESSION_HONESTY.md  LHA3_STDLIB_API.md  (+28 more)
electron/: README.md  README_NEW_FEATURES.md  auto-updater.js  azme-integration.js  chat-interface.html  main.js  package-lock.json  package.json  preferences.html  preferences.js  preload.js  process-monitor.js  renderer.js  settings.js  shortcuts.js  ui.html
examples/: azme_stateful.azl  azme_stream.azl  data_processor.azl  intelligent_agent.azl  native_core_ollama_stream_demo.azl  quantum_simulation.azl  simple_demo.azl  simple_demo_fixed.azl  simple_demo_working.azl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
migration/: INVENTORY.csv  MAPPING.md
modules/: math.azl  quantum.azl
project/: README.md
proptest-regressions/: azl_vm.txt
python_helpers/: plot_loss.py
release/: doc_verification_pieces.json
reports/: bootstrap_run_after_fixes.txt  event_prediction_system_complete.md  full_training_complete.md  placeholder_scan.txt  placeholder_scan_after_fixes.txt  supervision_report_20250808_184010.md  supervision_report_20250808_184015.md
scripts/: audit_gpu_neural_quantum_surfaces.sh  audit_live_path.sh  azl  azl-buildd  azl_azl_interpreter_runtime.sh  azl_bootstrap.sh  azl_c_interpreter_runtime.sh  azl_events_tail.sh  azl_execute.sh  azl_explore_local_artifacts.sh  azl_gguf_terminal_chat.sh  azl_install.sh  azl_launcher.azl  azl_local_layout.sh  azl_migrate_local_workspace.sh  azl_native_runtime_loop.sh  azl_organize_repo_root_artifacts.sh  azl_real_executor.azl  azl_release_tag_policy.sh  azl_resolve_native_runtime_cmd.sh  azl_runtime.js  azl_scan_for_language_benefits.sh  azl_seed_runner.sh  azl_sysproxy.c  azl_syswire.sh  azl_teardown_verify_native_stack.sh  azl_truncate_daemon_err.sh  azme_e2e.sh  azme_e2e_strict.sh  azme_provider.js  azme_proxy.js  bench_cold_vs_warm.sh  benchmark_azl_full_coverage_report.sh  benchmark_azl_vs_python.sh  benchmark_enterprise_v1_chat.sh  benchmark_gate.sh  benchmark_language_real_world.sh  benchmark_llm_gguf_direct.py  benchmark_llm_llama_server.py  benchmark_llm_ollama.sh  (+115 more)
src/: azl_error.rs  azl_standard_library.azl  azl_v2_compiler.rs  azl_vm.rs  main.rs  module_loader.rs
stdlib/: io.azl  math.azl  string.azl
tokenizers/: azl_azme_spm.model  azl_azme_spm.vocab  tokenizer.json  tokenizer_bpe32k.json
tools/: azl_bytecode.c  azl_bytecode.h  azl_compiler.c  azl_compiler.h  azl_core_engine.c  azl_core_engine.h  azl_event_dataset.py  azl_event_eval.py  azl_gguf_infer_llamacpp.cpp  azl_gguf_infer_llamacpp.h  azl_interpreter_minimal.c  azl_lsp.py  azl_native_engine.c  azl_native_engine_core_host.c  azl_native_engine_core_host.h  azl_runtime_spine_host.py  event_eval.jsonl  registry_server.py  sysproxy.c  test_minimal.azl
tools/cmake/azl_llamacpp_engine/: CMakeLists.txt
(+841 files in other folders)
